[package]
name = "xkcdpass"
version = "0.1.0"
authors = ["pc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
