[package]
name = "randompassword"
version = "1.0.0"
description = "Simple random password generator"
authors = ["Paul Collier"]
edition = "2021"
repository = "https://github.com/pshc/randompassword"
license = "ISC"
keywords = ["password"]

[dependencies]
rand = "0.7.3"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
